--- a/theme.html
+++ b/theme.html
@@ -24,6 +24,7 @@
 			<div id="wrapper">
 				<header>
 					<h1 id="logo">
+						<img src="invader.png" id="invader"  alt=""/>
 						<a href="/">
 							
 						</a>
