--- a/theme.html
+++ b/theme.html
@@ -30,6 +30,19 @@
 						</a>
 					</h1>
 				</header>
+				
+				<div id="content">
+					{% if is_home or is_tag %}
+						{% if posts %}
+						<div class="posts">
+							{% for post in posts %}
+								<div class="post_item">
+									<h3><a href="{%post.permalink%}">{{post.title}}</a></h3>
+								</div>
+							{% endfor %}
+						</div>
+						{% endif %}
+				</div>
 			</div>
 		{% endif %}
 		
