--- a/theme.html
+++ b/theme.html
@@ -37,7 +37,7 @@
 						<div class="posts">
 							{% for post in posts %}
 								<div class="post_item">
-									<h3><a href="{%post.permalink%}">{{post.title}}</a></h3>
+									<h3><a href="{{post.permalink}}">{{post.title}}</a></h3>
 								</div>
 							{% endfor %}
 						</div>
