--- a/theme.html
+++ b/theme.html
@@ -39,6 +39,9 @@
 							{% for post in posts %}
 								<div class="post_item">
 									<h3><a href="{{post.permalink}}">{{post.title}}</a></h3>
+									<div class="post_body" data-type-cleanup="true">
+										{{post.content}}
+									</div>
 								</div>
 							{% endfor %}
 						</div>
