--- a/theme.html
+++ b/theme.html
@@ -38,7 +38,7 @@
 						<div class="posts">
 							{% for post in posts %}
 								<div class="post_item">
-									<h3><a href="{{post.permalink}}">{{post.title}}</a></h3>
+									<h3><a href="{{post.permalink}}">{{post.title}}</a> / {{ post.created_at|format_date }}</h3>
 									<div class="post_body" data-type-cleanup="true">
 										{{post.content}}
 									</div>
