--- a/theme.html
+++ b/theme.html
@@ -15,6 +15,7 @@
 		{{header_meta}}
 		
 		<link rel="stylesheet" type="text/css" href="{{ assets('style.css') }}" />
+		<script src="{{assets('retina.min.js')}}" type="text/javascript"></script>
 		
 	</head>
 	<body>
