--- a/theme.html
+++ b/theme.html
@@ -25,6 +25,7 @@
 			<div id="wrapper">
 				<header>
 					<h1 id="logo">
+						<img src="{{assets('invader@2x.png')}}" id="invader" style="display:none;"  alt=""/>
 						<img src="{{assets('invader.png')}}" id="invader"  alt=""/>
 						<a href="/">
 							
