--- a/theme.html
+++ b/theme.html
@@ -25,9 +25,8 @@
 			<div id="wrapper">
 				<header>
 					<h1 id="logo">
-						<img src="{{assets('invader@2x.png')}}" id="invader" style="display:none;"  alt=""/>
-						<img src="{{assets('invader.png')}}" id="invader"  alt=""/>
-						<a href="/">
+						<img src="{{assets('invader@2x.png')}}" id="invader" style="display:none;"  width="36px" height="26px" alt=""/>
+						
 							
 						</a>
 						<div class="clear"></div>
