--- a/theme.html
+++ b/theme.html
@@ -25,7 +25,7 @@
 			<div id="wrapper">
 				<header>
 					<h1 id="logo">
-						<img src="{{assets('invader@2x.png')}}" id="invader" style="display:none;"  width="36px" height="26px" alt=""/>
+						<img src="{{assets('invader@2x.png')}}" id="invader" width="36px" height="26px" alt=""/>
 						
 							
 						</a>
