--- a/theme.html
+++ b/theme.html
@@ -27,7 +27,7 @@
 					<h1 id="logo">
 						<img src="{{assets('invader@2x.png')}}" id="invader" width="36px" height="26px" alt=""/>
 						
-							
+							<a href="/"></a>
 						</a>
 						<div class="clear"></div>
 					</h1>
